--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple REST server to manipulate darkice audio streaming service via systemctl",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests yet\" && exit 0"
   },
   "repository": {
     "type": "git",
