--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "darkice-rest",
-  "version": "0.2.2",
-  "description": "Simple REST server to manipulate darkice audio streaming service via systemctl",
+  "name": "systemctl-rest",
+  "version": "0.3.0",
+  "description": "Simple REST server to manipulate system services via systemctl",
   "main": "server.js",
   "scripts": {
     "test": "echo \"No tests yet\" && exit 0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/plesatejvlk/darkice-rest.git"
+    "url": "git+https://github.com/plesatejvlk/systemctl-rest.git"
   },
   "keywords": [
-    "darkice",
+    "systemctl",
+    "systemd",
+    "service",
     "rest",
     "server"
   ],
   "author": "Honza Kotrs <honza@kotrs.cz>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/plesatejvlk/darkice-rest/issues"
+    "url": "https://github.com/plesatejvlk/systemctl-rest/issues"
   },
-  "homepage": "https://github.com/plesatejvlk/darkice-rest#readme",
+  "homepage": "https://github.com/plesatejvlk/systemctl-rest#readme",
   "dependencies": {
     "express": "^4.16.3",
     "sysctlx": "0.0.7"
